css/pointbuy.css
body {

  text-align: right;

}

h1 {
  padding-top: 32px;
  padding-bottom: 1rem;
  padding-left: 47px;
}


*~label{
  color: yellow;
}
.container {
  /* background-color: gray; */
  display: block;
  min-width: 40rem;
  text-align: left;
  margin-top:0;
}



.input-group {
  display: flex;
  justify-content: flex-end;
  width:8rem;
}

.col-2 {
  min-width: 8rem;
}


td {
  min-width: 3rem;
  width: 6rem;
  max-width: 9rem;

  min-height: 2rem;
  height: 4rem;
}

th {
  min-width: 3rem;
  width: 8rem;
  max-width: 8rem;

  min-height: 2rem;
  height: 4rem;
}

#table-container {
  width: 100vw;
}

table {
  text-align: center;
  font-size: x-large;

  background-image: url('../images/parchment.jpg');
  border-radius: 1rem;
  margin-left: 3rem;
  background-color: white;


}

#row-thing {
  position: relative;
}

#score-header {
  text-align: right;
  position: relative;
  left: 3rem;

}



/* Media query to adjust alignment of button column for smaller screens.
Small vertical screens are still cramped, but the horizontal option
looks ok.
 */

.input-group {
  justify-content: center;
}

#score-header {
  left: 0rem;
}

@media (max-width:850px) {
  table {
    margin-left: 1rem;
    table-layout: fixed;
    width: 50%;
  }
}

.form {
  width: 3rem;
  min-width: 3rem;
}


/* Disappears stock arrow buttons for number input fields */
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

